--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/reactiflux/archive-bot#readme",
   "dependencies": {
+    "sequelize": "^3.9.0",
     "slackbotapi": "^1.3.4"
   }
 }
